--- a/add-content.html
+++ b/add-content.html
@@ -3,229 +3,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Content - Al-Noor: Sanctuary of the Heart</title>
+    <title>Add Content - Al-Noor</title>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Inter', sans-serif;
-            background: #2a6349;
-            color: #1a3c34;
-            line-height: 1.7;
-            min-height: 100vh;
-            position: relative;
-            overflow-x: hidden;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #FFD700, #40E0D0);
+            color: #1A3C34;
+            margin: 0;
+            padding: 20px;
         }
-
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://www.transparenttextures.com/patterns/arabesque.png');
-            opacity: 0.15;
-            z-index: -2;
-            animation: patternPulse 20s infinite ease-in-out;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 3rem auto;
-            padding: 0 2rem;
-        }
-
-        .content-section {
-            background: rgba(255, 255, 255, 0.92);
-            border-radius: 25px;
-            padding: 3rem;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
-            border: 2px solid rgba(212, 163, 115, 0.5);
-            backdrop-filter: blur(10px);
-            animation: fadeIn 1.5s ease-in;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .content-section::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(212, 163, 115, 0.1), transparent);
-            opacity: 0.3;
-            transform: rotate(45deg);
-            z-index: -1;
-        }
-
-        h2 {
-            font-family: 'Amiri', serif;
-            font-size: 2.5rem;
-            color: #2a6349;
-            margin-bottom: 2rem;
+        nav {
+            background: rgba(248, 241, 233, 0.9);
+            padding: 10px;
             text-align: center;
         }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        label {
-            font-family: 'Amiri', serif;
-            font-size: 1.3rem;
-            color: #2a6349;
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 0.8rem;
-            border: 1px solid rgba(212, 163, 115, 0.3);
-            border-radius: 5px;
-            font-family: 'Inter', sans-serif;
-            font-size: 1rem;
-            background: rgba(247, 231, 225, 0.4);
-            color: #34495e;
-        }
-
-        textarea {
-            min-height: 200px;
-            resize: vertical;
-        }
-
-        button {
-            padding: 0.8rem 1.5rem;
-            background: #2a6349;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        button:hover {
-            background: #d4a373;
-        }
-
-        .back-link {
-            display: inline-block;
-            margin-top: 1rem;
-            color: #2a6349;
+        nav a {
+            color: #1A3C34;
+            margin: 0 15px;
             text-decoration: none;
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
-            transition: color 0.3s ease;
         }
-
-        .back-link:hover {
-            color: #d4a373;
+        nav a:hover {
+            color: #FF6F61;
         }
-
-        #content-form {
+        #add-article-link {
             display: none;
         }
-
-        #password-form {
+        h2 {
+            font-family: 'Georgia', serif;
+            color: #1A3C34;
             text-align: center;
         }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(40px); }
-            to { opacity: 1; transform: translateY(0); }
+        .form-container {
+            max-width: 600px;
+            margin: 20px auto;
+            background: #F8F1E9;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #FF6F61;
         }
-
-        @keyframes patternPulse {
-            0% { opacity: 0.15; }
-            50% { opacity: 0.25; }
-            100% { opacity: 0.15; }
+        .form-group {
+            margin-bottom: 15px;
         }
-
-        @media (max-width: 600px) {
-            .container { padding: 0 1.2rem; }
-            .content-section { padding: 2rem; }
-            h2 { font-size: 2rem; }
-            label { font-size: 1.2rem; }
-            button { font-size: 1.1rem; }
+        label {
+            display: block;
+            color: #1A3C34;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #FF6F61;
+            border-radius: 5px;
+        }
+        textarea {
+            height: 150px;
+        }
+        button {
+            padding: 10px;
+            background: #1A3C34;
+            color: #F8F1E9;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #FF6F61;
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px;
+            background: #1A3C34;
+            color: #F8F1E9;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .back-link:hover {
+            background: #FF6F61;
+        }
+        #content-form {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <section class="content-section">
-            <h2>Add a New Article</h2>
-            <div id="password-form">
-                <div class="form-group">
-                    <label for="password">Enter Password</label>
-                    <input type="password" id="password" name="password" required placeholder="Enter your password">
-                </div>
-                <button onclick="checkPassword()">Submit</button>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="add-content.html" id="add-article-link">Add Article</a>
+    </nav>
+    <div class="form-container">
+        <h2>Add a New Article</h2>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" required placeholder="Enter email">
             </div>
-            <form id="content-form">
-                <div class="form-group">
-                    <label for="title">Article Title</label>
-                    <input type="text" id="title" name="title" required placeholder="Enter the article title">
-                </div>
-                <div class="form-group">
-                    <label for="content">Article Content</label>
-                    <textarea id="content" name="content" required placeholder="Write your article here..."></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="media">Media URL (Optional, e.g., halal video or pattern)</label>
-                    <input type="url" id="media" name="media" placeholder="Enter a URL for a video or pattern (optional)">
-                </div>
-                <button type="submit">Add Article</button>
-            </form>
-            <a href="index.html" class="back-link">Back to Home</a>
-        </section>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" required placeholder="Enter password">
+            </div>
+            <button type="submit">Login</button>
+        </form>
+        <form id="content-form">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" id="title" required placeholder="Article title">
+            </div>
+            <div class="form-group">
+                <label for="content">Content</label>
+                <textarea id="content" required placeholder="Write article here"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="media">Media URL (optional)</label>
+                <input type="url" id="media" placeholder="Halal video URL">
+            </div>
+            <button type="submit">Add Article</button>
+        </form>
+        <a href="index.html" class="back-link">Back to Home</a>
     </div>
-    <script>
-        // Ensure green background
-        document.addEventListener('DOMContentLoaded', function() {
-            document.body.style.background = '#2a6349';
-        });
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
+        import { getFirestore, collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
+        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
 
-        // Password check
-        function checkPassword() {
-            const password = document.getElementById('password').value;
-            const correctPassword = 'asdmen50sana'; // Replace with your secure password
-            if (password === correctPassword) {
-                document.getElementById('password-form').style.display = 'none';
-                document.getElementById('content-form').style.display = 'block';
-            } else {
-                alert('Incorrect password. Redirecting to home page.');
-                window.location.href = 'index.html';
-            }
-        }
+        const firebaseConfig = {
+            // Replace with your Firebase config
+            apiKey: "your-api-key",
+            authDomain: "your-project-id.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project-id.appspot.com",
+            messagingSenderId: "your-messaging-sender-id",
+            appId: "your-app-id"
+        };
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const auth = getAuth(app);
 
-        // Handle form submission
-        const form = document.getElementById('content-form');
-        form.addEventListener('submit', function(event) {
-            event.preventDefault();
-            const title = document.getElementById('title').value;
-            const content = document.getElementById('content').value;
-            const media = document.getElementById('media').value;
+        document.addEventListener('DOMContentLoaded', () => {
+            const loginForm = document.getElementById('login-form');
+            const contentForm = document.getElementById('content-form');
+            const addArticleLink = document.getElementById('add-article-link');
 
-            // Get existing articles from localStorage
-            const articles = JSON.parse(localStorage.getItem('articles')) || [];
-            // Add new article
-            articles.push({ title, content, media });
-            // Save to localStorage
-            localStorage.setItem('articles', JSON.stringify(articles));
-            // Reset form
-            form.reset();
-            // Alert user and redirect
-            alert('Article added successfully! Return to the home page to view it.');
-            window.location.href = 'index.html';
+            // Show/hide forms based on auth
+            onAuthStateChanged(auth, (user) => {
+                loginForm.style.display = user ? 'none' : 'block';
+                contentForm.style.display = user ? 'block' : 'none';
+                addArticleLink.style.display = user ? 'inline' : 'none';
+            });
+
+            // Handle login
+            loginForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const email = document.getElementById('email').value;
+                const password = document.getElementById('password').value;
+                try {
+                    await signInWithEmailAndPassword(auth, email, password);
+                } catch (error) {
+                    alert('Login failed. Check email/password.');
+                }
+            });
+
+            // Handle article submission
+            contentForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const title = document.getElementById('title').value;
+                const content = document.getElementById('content').value;
+                const media = document.getElementById('media').value;
+                try {
+                    await addDoc(collection(db, 'articles'), { title, content, media });
+                    contentForm.reset();
+                    alert('Article added!');
+                    window.location.href = 'index.html';
+                } catch (error) {
+                    alert('Failed to add article.');
+                }
+            });
         });
     </script>
 </body>
