--- a/article.html
+++ b/article.html
@@ -3,184 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article - Al-Noor: Sanctuary of the Heart</title>
+    <title>Article - Al-Noor</title>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #FFD700 0%, #40E0D0 100%);
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #FFD700, #40E0D0);
             color: #1A3C34;
-            line-height: 1.8;
-            min-height: 100vh;
-            position: relative;
-            overflow-x: hidden;
+            margin: 0;
+            padding: 20px;
         }
-
         nav {
-            position: sticky;
-            top: 0;
-            background: rgba(248, 241, 233, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 1.5rem;
+            background: rgba(248, 241, 233, 0.9);
+            padding: 10px;
             text-align: center;
-            z-index: 1000;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
-
         nav a {
             color: #1A3C34;
+            margin: 0 15px;
             text-decoration: none;
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
-            margin: 0 1.5rem;
-            transition: color 0.3s ease;
         }
-
         nav a:hover {
             color: #FF6F61;
         }
-
         #add-article-link {
             display: none;
         }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" opacity="0.2"><path d="M50 20c-10 0-15 10-15 20s10 15 20 15 15-10 15-20-10-15-20-15z" fill="%23FF6F61"/><path d="M30 50c-10 0-15 10-15 20s10 15 20 15 15-10 15-20-10-15-20-15z" fill="%23F8F1E9"/></svg>') repeat;
-            opacity: 0.2;
-            z-index: -2;
-            animation: floralDrift 30s infinite linear;
-        }
-
-        .particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: rgba(255, 111, 97, 0.6);
-            border-radius: 50%;
-            animation: float 12s infinite ease-in-out;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 4rem auto;
-            padding: 0 2.5rem;
-        }
-
-        .content-section {
-            background: rgba(248, 241, 233, 0.97);
-            border-radius: 25px;
-            padding: 4rem;
-            box-shadow: 0 12px 50px rgba(0, 0, 0, 0.2), inset 0 0 12px rgba(255, 111, 97, 0.3);
-            backdrop-filter: blur(15px);
-            animation: fadeIn 2s ease-out;
-        }
-
         h2 {
-            font-family: 'Amiri', serif;
-            font-size: 3.2rem;
+            font-family: 'Georgia', serif;
             color: #1A3C34;
-            margin-bottom: 2.5rem;
             text-align: center;
-            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         }
-
-        .article-content {
-            font-family: 'Inter', sans-serif;
-            font-size: 1.3rem;
-            color: #34495E;
-            line-height: 1.9;
+        .article {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #F8F1E9;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #FF6F61;
         }
-
-        .article-content h4 {
-            font-family: 'Amiri', serif;
-            font-size: 2rem;
-            color: #1A3C34;
-            margin: 2rem 0 1rem;
-        }
-
-        .article-content p {
-            margin-bottom: 1.5rem;
-        }
-
-        .article-content video {
-            max-width: 100%;
-            border-radius: 12px;
-            margin: 2rem 0;
-            box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
-        }
-
         .back-link {
             display: inline-block;
-            margin-top: 2rem;
-            padding: 0.8rem 1.5rem;
+            margin: 20px;
+            padding: 10px;
             background: #1A3C34;
             color: #F8F1E9;
             text-decoration: none;
-            border-radius: 8px;
-            font-family: 'Inter', sans-serif;
-            font-size: 1.2rem;
-            transition: background 0.3s ease, transform 0.3s ease;
+            border-radius: 5px;
         }
-
         .back-link:hover {
             background: #FF6F61;
-            transform: translateY(-3px);
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(50px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes floralDrift {
-            0% { background-position: 0 0; }
-            100% { background-position: 150px 150px; }
-        }
-
-        @keyframes float {
-            0% { transform: translateY(100vh) scale(0.8); opacity: 0.3; }
-            50% { opacity: 0.8; }
-            100% { transform: translateY(-100vh) scale(1.3); opacity: 0; }
-        }
-
-        @media (max-width: 768px) {
-            .container { padding: 0 2rem; }
-            .content-section { padding: 3rem; }
-            h2 { font-size: 2.8rem; }
-            .article-content { font-size: 1.2rem; }
-            .article-content h4 { font-size: 1.8rem; }
-            .back-link { font-size: 1.1rem; }
-            nav a { font-size: 1.1rem; margin: 0 1rem; }
-        }
-
-        @media (max-width: 480px) {
-            .content-section { padding: 2rem; }
-            h2 { font-size: 2.2rem; }
-            .article-content { font-size: 1.1rem; }
         }
     </style>
 </head>
@@ -189,19 +63,10 @@
         <a href="index.html">Home</a>
         <a href="add-content.html" id="add-article-link">Add Article</a>
     </nav>
-    <div class="particles">
-        <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
-        <div class="particle" style="left: 30%; animation-delay: 5s;"></div>
-        <div class="particle" style="left: 50%; animation-delay: 10s;"></div>
-        <div class="particle" style="left: 70%; animation-delay: 3s;"></div>
-        <div class="particle" style="left: 90%; animation-delay: 7s;"></div>
-    </div>
-    <div class="container">
-        <section class="content-section">
-            <h2 id="article-title"></h2>
-            <div class="article-content" id="article-content"></div>
-            <a href="index.html" class="back-link">Back to Articles</a>
-        </section>
+    <div class="article">
+        <h2 id="article-title"></h2>
+        <div id="article-content"></div>
+        <a href="index.html" class="back-link">Back to Articles</a>
     </div>
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js';
@@ -209,49 +74,19 @@
         import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
 
         const firebaseConfig = {
-           // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyD9X2HAbZKO1YOjX0w7NMtR5Zxq1pUCXEg",
-  authDomain: "al-noor-b5026.firebaseapp.com",
-  projectId: "al-noor-b5026",
-  storageBucket: "al-noor-b5026.firebasestorage.app",
-  messagingSenderId: "335661830471",
-  appId: "1:335661830471:web:c58d02e70a5df1a8897c62",
-  measurementId: "G-PSPS9ELS1G"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+            // Replace with your Firebase config
+            apiKey: "your-api-key",
+            authDomain: "your-project-id.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project-id.appspot.com",
+            messagingSenderId: "your-messaging-sender-id",
+            appId: "your-app-id"
         };
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         const auth = getAuth(app);
 
-        document.addEventListener('DOMContentLoaded', async function() {
-            document.body.style.background = 'linear-gradient(135deg, #FFD700 0%, #40E0D0 100%)';
-
+        document.addEventListener('DOMContentLoaded', async () => {
             // Show/hide Add Article link
             onAuthStateChanged(auth, (user) => {
                 document.getElementById('add-article-link').style.display = user ? 'inline' : 'none';
